--- a/WEB Lost Island/inicio.html
+++ b/WEB Lost Island/inicio.html
@@ -19,7 +19,7 @@
 					<a href="inicio.html"><img src="img/LOGO.png" alt=""></a>					
 				</div>
 				<div class="menu col-xs-12 col-md-6">					
-					<a href="scoreboard.html">ScoreBoard</a>
+					<a href="scoreboard1.html">ScoreBoard</a>
 					<a href="login.html">LogIn</a>
 					<a href="singup.html">SingUp</a>
 				</div>
@@ -30,8 +30,8 @@
 					<h2 class="primera_linea">LOST ISLAND</h2>
 					<h3 class="segunda_linea">El mejor juego del mundo</h3>
 					<dib class="contendeor-btns">
-						<a href="#">Informacion</a>
-						<a href="#">Mapas</a>
+						<a href="#info">Informacion</a>
+						<a href="#mapas">Mapas</a>
 					</dib>
 				</div>
 			</div>
@@ -40,7 +40,7 @@
 
 
 	<section class="main">
-		<section class="info">
+		<section class="info" id="info">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
@@ -61,7 +61,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="mapas">
+		<section class="mapas" id="mapas">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
