--- a/WEB Lost Island/scoreboard1.html
+++ b/WEB Lost Island/scoreboard1.html
@@ -19,9 +19,9 @@
 					<a href="inicio.html"><img src="img/LOGO.png" alt=""></a>					
 				</div>
 				<div class="menu col-xs-12 col-md-6">					
-					<a href="scoreboard.html">ScoreBoard</a>
-					<a href="#">LogIn</a>
-					<a href="#">SingUp</a>
+					<a href="scoreboard1.html">ScoreBoard</a>
+					<a href="login.html">LogIn</a>
+					<a href="singup.html">SingUp</a>
 				</div>
 			</div>
 		</div>		
