--- a/WEB Lost Island/login.html
+++ b/WEB Lost Island/login.html
@@ -5,7 +5,7 @@
     <head>
 
         <meta charset="utf-8">
-        <title>Fullscreen Login</title>
+        <title>Login</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,500i,700" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
@@ -24,7 +24,7 @@
             <form action="" method="post">
                 <input type="text" name="username" class="username" placeholder="Username">
                 <input type="password" name="password" class="password" placeholder="Password">
-                <button type="submit">Sign me in</button>
+                <button type="submit"><a href="inicio2.html">Sign me in</a></button>
                 <div class="error"><span>+</span></div>
             </form>
         </section>
